--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,13 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.github.librepdf</groupId>
+			<artifactId>openpdf</artifactId>
+			<version>1.3.27</version>
+		</dependency>
+
+
+		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>glassfish-jstl</artifactId>
 			<version>11.0.12</version>
@@ -54,6 +61,12 @@
 		<dependency>
 			<groupId>org.apache.tomcat.embed</groupId>
 			<artifactId>tomcat-embed-jasper</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>5.2.4</version>
 		</dependency>
 
 
